manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: takanashi-nginx-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: takanashi-nginx
  template:
    metadata:
      labels:
        app: takanashi-nginx
    spec:
      containers:
        - name: takanashi-nginx-container
          image: f25681/nginx_php_sample:1.0.9
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 15
          resources:
            limits:
              cpu: "0.1"
              memory: "512Mi"
            requests:
              cpu: "0.05"
              memory: "256Mi"
