manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-php-service
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: nginx-php
