manifest/01-takanashi-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: takanashi-test-01
  namespace: takanashi-test
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/group.name: takanashi-external
    alb.ingress.kubernetes.io/group.order: "1"
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443},{"HTTP":80}]'
    alb.ingress.kubernetes.io/healthcheck-path: "/"
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=30
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '30'
    alb.ingress.kubernetes.io/actions.alias-domain: >
       {"type":"forward","forwardConfig":{"targetGroups":[{"serviceName":"takanashi-nginx-service","servicePort":"80"}]}}
    alb.ingress.kubernetes.io/conditions.alias-domain: >
      [{"field":"host-header","hostHeaderConfig":{"values":["takanashi-test*.com"]}}]
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:137778986659:certificate/74653c06-2e4c-4e80-b286-025eb90ccf0b,arn:aws:acm:ap-southeast-1:137778986659:certificate/9f503f66-0dee-430b-ba87-d91b32c78a28,arn:aws:acm:ap-southeast-1:137778986659:certificate/1fcea01f-bc2f-43b8-95f8-9e22a8fc12a9
  labels:
    app.kubernetes.io/part-of: takanashi-nginx-alb
spec:
  rules:
    - http: 
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend: 
              service:
                name: alias-domain
                port: 
                  name: use-annotation
