manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/actions.alias-domain: |
      {"type":"forward","forwardConfig":{"targetGroups":[{"serviceName":"argocd-server","servicePort":"80"}]}}
    alb.ingress.kubernetes.io/conditions.alias-domain: |
      [{"field":"host-header","hostHeaderConfig":{"values":["homework.catseenextday.com"]}}]
    alb.ingress.kubernetes.io/group.name: takanashi
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.order: "30"
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "60"
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=30
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
  finalizers:
  - group.ingress.k8s.aws/takanashi
  generation: 1
  labels:
    app: takanashi-alb
  name: takanashi-alb
  namespace: takanashi-test
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: takanashi-nginx-service
            port:
              number: 80
        path: /
        pathType: Prefix
